@@ -53,13 +53,17 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
 
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
+}
+
 run {
     jvmArgs += ['--enable-preview']
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'configgen.App'
+    mainClass = 'configgen.Main'
 }
 
 tasks.named('test') {
